--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@ng-select/ng-select": "^14.7.0",
     "ngx-toaster": "^1.0.1",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
