--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@ng-select/ng-select": "^14.7.0",
+    "moment": "^2.30.1",
     "ngx-toaster": "^1.0.1",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
@@ -33,6 +34,7 @@
     "@tailwindcss/cli": "^4.1.0",
     "@tailwindcss/postcss": "^4.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/moment": "^2.11.29",
     "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
