--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
+    "@angular/fire": "^20.0.0",
     "@angular/forms": "^19.0.0",
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@ng-select/ng-select": "^14.7.0",
+    "firebase": "^11.9.0",
     "moment": "^2.30.1",
     "ngx-toaster": "^1.0.1",
     "ngx-toastr": "^19.0.0",
